add_subdirectory(check)
add_subdirectory(erase)
add_subdirectory(list)
add_subdirectory(npipe)
add_subdirectory(pcap)
add_subdirectory(shm)
add_subdirectory(stubs)

if (IBVerbs_FOUND)
  message(STATUS "Found OFED: OFED transport will be built")
  add_subdirectory(ofed)
endif (IBVerbs_FOUND)

if (${CMAKE_SYSTEM_NAME} MATCHES "OpenBSD")
  add_subdirectory(tap)
endif (${CMAKE_SYSTEM_NAME} MATCHES "OpenBSD")
